--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "flowbite-react": "^0.10.2",
     "formik": "^2.4.6",
     "framer-motion": "^12.4.7",
+    "gsap": "^3.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
